fix(QDialog): should keep at least 24px padding on minimized on ios

--- a/ui/src/components/dialog/QDialog.styl
+++ b/ui/src/components/dialog/QDialog.styl
@@ -1,3 +1,5 @@
+$dialog-minimized-padding = 24px
+
 .q-dialog
 
   &__title
@@ -28,7 +30,7 @@
         min-width: 64px
 
     &--minimized
-      padding: 24px
+      padding: $dialog-minimized-padding
       > div
         max-height: calc(100vh - 48px)
 
@@ -83,6 +85,9 @@ body.q-ios-padding .q-dialog__inner
   padding-top: $ios-statusbar-height !important
   padding-top: env(safe-area-inset-top) !important
   padding-bottom: env(safe-area-inset-bottom) !important
+  &--minimized
+    padding-top: "calc(env(safe-area-inset-top) + %s) !important" % $dialog-minimized-padding
+    padding-bottom: "calc(env(safe-area-inset-bottom) + %s) !important" % $dialog-minimized-padding
   > div
     // quotes are stylus workaround to not error when parsing env()
     max-height: "calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom)) !important" % $ios-statusbar-height
